[tool.poetry]
name = "ssh2_parse_key"
version = "0.3.0"
description = "Parses ssh2 keys and converts to multiple formats."
authors = ["Nigel Metheringham <nigelm@cpan.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://pypi.org/project/ssh2-parse-key/"
repository = "https://github.com/nigelm/ssh2_parse_key"
documentation = "https://ssh2-parse-key.readthedocs.io/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
    "README.rst",
    "tests/*",
    "docs/*"
]
exclude = [
    "**/__pycache__",
    "**/*.py[oc]"
]

[tool.poetry.dependencies]
python = ">=3.6"
classforge = "^0.92"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
distlib = "^0.3.1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-datadir = "^1.3.1"
pytest-runner = "^5.2"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
